# sft

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-qlora.txt  requirements.txt  run_base.py  run_compare.py  run_lora.py  run_merged.py
configs/: llamafactory_qwen25_3b_medical_qlora.yaml  medical_qwen25_3b.yaml
docs/: RUNBOOK.md  RUN_RECORD.md  TRAINING_PLAN.md  VSCODE_RUN.md
scripts/: chat_test.py  compare_models.py  evaluate_prompts.py  export_llamafactory_dataset.py  merge_lora.py  prepare_dataset.py  train_sft.py
src/sft_toolkit/: __init__.py  config.py  data.py  modeling.py  torch_dataset.py
tests/: test_data.py
